2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	Add support for name grouping import/export
	* src/GrampsDb/_GrampsDbWriteXML.py: write group table out
	* src/GrampsDb/_GrampsBSDDB.py: group table is no sec table, init it
		together with primary tables!
	* src/gen/db/base.py: obtain grouping keys
	* src/gen/db/dbdir.py: group table is no sec table, init it
		together with primary tables!
	* src/gen/utils/dbutils.py: grdb -> grdb copy of grouping table, 
		copy mediapath.
	* src/gen/proxy/proxybase.py: obtain grouping keys, add missing
		bookmark methods
	* src/gen/proxy/dbbase.py: add obtain grouping keys method
	* src/GrampsDbUtils/_ReadXML.py: read in group table
	* src/plugins/ReadGrdb.py: read in group table

2007-12-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/Makefile.am: Missing _PluginsWindows.py
	* po/test: new unittest dir
	* po/test/po_test.py: new unittest suite for POTFILES
	  and Makefiles
	* po/POTFILES.in: Missing CalculateEstimatedDates.py

2007-12-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_MenuOptions.py: Fixed boolean option double label

2007-12-06  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_PluginWindows.py: Removed unnecessary code
	* src/PluginUtils/_MenuOptions.py: Added "Change" button for filter option

2007-12-06  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_PluginMgr.py: return values on load_plugins was 
	reversed: return True if errors.

2007-12-06 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_GedcomParse.py : #1418 fix read ASSO
	* src/GrampsDbUtils/_WriteGedcom.py : #1418 fix write ASSO
	read was looking for TYPE, write was emitting TYPE, but
	TYPE evidently was only part of a draft (or earlier) spec
	Current spec allows ASSO to link only to INDI

2007-12-06  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: pass in handle to link
	* src/PluginUtils/_PluginWindows.py: New clickable text tests
